--- a/index.html
+++ b/index.html
@@ -24,16 +24,22 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dimension</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<h1>Katherin Garcia</h1>
+								<p>Hello!! Im a software engineer looking for new opportunities<br />
+								reach me at:
+								<ul class="icons">
+									<li><a target="_blank" href="https://www.linkedin.com/in/katherin-garcia-9845a8194/" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
+									<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
+									<!-- <li><a target="_blank" href="https://angel.co/u/katherin-garcia" class="icon brands fa-"><span class="label">Instagram</span></a></li> -->
+									<li><a target="_blank" href="https://github.com/Katherin4u" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+								</ul>
 							</div>
 						</div>
 						<nav>
 							<ul>
 								<li><a href="#intro">Intro</a></li>
 								<li><a href="#work">Work</a></li>
-								<li><a href="#about">About</a></li>
+								<!-- <li><a href="#about">About</a></li> -->
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -46,30 +52,35 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<span class="image main1"><img  src="images/Snapchat-1155797878 (1).jpg" alt="" /></span>
+								<p>Greetings, I'm Katherin Garcia - a skilled software engineer with a passion for creative web development. My introduction to the field came from my husband, and ever since then, I've been captivated by the process of using technology to craft engaging, interactive websites. As an artist, I find great satisfaction in bringing my vision to life through code and seeing the final product come to fruition. Thanks to the rigorous training and guidance provided by App Academy, I've developed a robust skill set and have built three exceptional <a href="#work">Projects</a> that showcase my abilities. I'm eager to utilize these skills in a professional setting and contribute to the development of innovative solutions in the software engineering landscape. Looking forward to connecting with industry professionals and discovering exciting career opportunities!.</p>
+							
 							</article>
 
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<span class="image main"><img src="images/Pin-it picture.jpg" alt="" /></span>
+								<p><a target="_blank" href="https://pin-it.onrender.com" ><span class="label">Pin-it</span></a> is a user-friendly social media platform for showcasing interests and passions, promoting engagement and community. Through its search tool, users can easily find specific content that aligns with their interests, and a comprehensive commenting system that allows for user discussions.</p>
+								<span class="image main"><img src="images/Kartsy picture.jpg" alt="" /></span>
+								<p><a target="_blank" href="https://kartsy.onrender.com/" ><span class="label">Kartsy</span></a> is an e-commerce platform that enables users to effortlessly post and sell their products while also providing a seamless shopping experience. Through the platform, users can easily add items to their cart and checkout with just a few clicks, while also leaving reviews on products they have purchased. Kartsy's l search tool allows users to quickly find specific products that align with their interests and needs.</p>
+								<span class="image main"><img src="images/Loka picture.jpg" alt="" /></span>
+								<p><a target="_blank" href="https://dupe-brb-loka.onrender.com" ><span class="label">Dupe-brb-loka</span></a> is a web-based platform that enables users to create and share rental property listings, showcasing the unique features of each property in a visually compelling manner. Through the platform, renters can browse available options and leave reviews based on their experiences.</p>
+
 							</article>
 
 						<!-- About -->
-							<article id="about">
+							<!-- <article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
-							</article>
+							</article> -->
 
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
+								<script class="fields" type="text/javascript" src="https://form.jotform.com/jsform/230686253157156"></script>
+								<!-- <form method="post" action="https://form.jotform.com/jsform/230686253157156">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
@@ -88,17 +99,17 @@
 										<li><input type="submit" value="Send Message" class="primary" /></li>
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
-								</form>
-								<ul class="icons">
+								</form> -->
+								<!-- <ul class="icons">
 									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
+								</ul> -->
 							</article>
 
 						<!-- Elements -->
-							<article id="elements">
+							<!-- <article id="elements">
 								<h2 class="major">Elements</h2>
 
 								<section>
@@ -337,7 +348,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									</form>
 								</section>
 
-							</article>
+							</article> -->
 
 					</div>
 
