resume, some changes to intro

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<div class="content">
 				<div class="inner">
 					<h1>Katherin Garcia</h1>
-					<p>Hello!! Im a software engineer looking for new opportunities<br />
+					<p>Hello!! Im a software engineer looking for new opportunities, Checkout my <a href="images/Katherin Garcia Resume (5).pdf" download> Resume</a><br />
 						reach me at:
 					<ul class="icons">
 						<li><a target="_blank" href="https://www.linkedin.com/in/katherin-garcia-9845a8194/"
@@ -44,8 +44,8 @@
 			<nav>
 				<ul>
 					<li><a href="#intro">Intro</a></li>
-					<li><a href="#work">Work</a></li>
-					<!-- <li><a href="#about">About</a></li> -->
+					<li><a href="#work">Projects</a></li>
+					<li><a href="#about">Skills</a></li>
 					<li><a href="#contact">Contact</a></li>
 					<!--<li><a href="#elements">Elements</a></li>-->
 				</ul>
@@ -59,9 +59,10 @@
 			<article id="intro">
 				<h2 class="major">Intro</h2>
 				<span class="image main1"><img src="images/Snapchat-1155797878 (1).jpg" alt="" /></span>
-				<p>Greetings, I'm Katherin Garcia - a skilled software engineer with a passion for creative web
-					development. My introduction to the field came from my husband, and ever since then, I've been
-					captivated by the process of using technology to craft engaging, interactive websites. As an artist,
+				<p> Greetings, I'm Katherin Garcia - a skilled software engineer with a passion for creative web
+					development. My introduction to the field came from my husbands projects, around that time I was also pursuing a course in Cyber Security where I learned how to build computers. 
+					Although I found computer building less fulfilling than I had hoped, it helped me discover my true passion for Software Engineering and building exceptional projects from scratch.
+					I am captivated by the process of using technology to create engaging, interactive websites that come to life and reflect my artistic vision. As an artist,
 					I find great satisfaction in bringing my vision to life through code and seeing the final product
 					come to fruition. Thanks to the rigorous training and guidance provided by App Academy, I've
 					developed a robust skill set and have built three exceptional <a href="#work">Projects</a> that
@@ -73,7 +74,7 @@
 
 			<!-- Work -->
 			<article id="work">
-				<h2 class="major">Work</h2>
+				<h2 class="major">Projects</h2>
 				<span class="image main"><img src="images/Pin-it picture.jpg" alt="" /></span>
 				<p><a target="_blank" href="https://pin-it.onrender.com"><span class="label">Pin-it</span></a> is a
 					user-friendly social media platform for showcasing interests and passions, promoting engagement and
@@ -96,11 +97,53 @@
 			</article>
 
 			<!-- About -->
-			<!-- <article id="about">
-								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
-							</article> -->
+			<article id="about">
+				<h2 class="major">Skills</h2>
+				<span class="image main"></span>
+				<div style="display: flex; justify-content: space-around;">
+					<div>
+						<li>
+							Javascript
+						</li>
+						<li>
+							Python
+						</li>
+						<li>
+							Flask
+						</li>
+						<li>
+							React.js
+						</li>
+						<li>
+							Redux
+						</li>
+						<li>
+							Express
+						</li>
+					</div>
+					<div>
+						<li>
+							Node.js
+						</li>
+						<li>
+							Sequelize
+						</li>
+						<li>
+							SQL
+						</li>
+						<li>
+							WTForms
+						</li>
+						<li>
+							HTML
+						</li>
+						<li>
+							CSS
+						</li>
+
+					</div>
+				</div>
+			</article>
 
 			<!-- Contact -->
 			<article id="contact">
@@ -210,6 +253,8 @@
 						float: left;
 						text-align: left;
 					}
+
+
 
 					.form-label-right {
 						display: inline-block;
@@ -1636,11 +1681,13 @@
 
 				<link type="text/css" rel="stylesheet"
 					href="https://cdn02.jotfor.ms/css/styles/buttons/form-submit-button-carbon_rounded.css?3.3.40071" />
-				<form target="_blank"  class="jotform-form" style="display: flex; justify-content: center;" action="https://submit.jotform.com/submit/230686253157156" method="post"
-					name="form_230686253157156" id="230686253157156" accept-charset="utf-8" autocomplete="on"><input
-						type="hidden" name="formID" value="230686253157156" /><input type="hidden" id="JWTContainer"
-						value="" /><input type="hidden" id="cardinalOrderNumber" value="" />
-					<div role="main" class="form-all" style="display: flex; justify-content: center; border-radius: 5px;">
+				<form target="_blank" class="jotform-form" style="display: flex; justify-content: center;"
+					action="https://submit.jotform.com/submit/230686253157156" method="post" name="form_230686253157156"
+					id="230686253157156" accept-charset="utf-8" autocomplete="on"><input type="hidden" name="formID"
+						value="230686253157156" /><input type="hidden" id="JWTContainer" value="" /><input type="hidden"
+						id="cardinalOrderNumber" value="" />
+					<div role="main" class="form-all"
+						style="display: flex; justify-content: center; border-radius: 5px;">
 						<ul class="form-section page-section">
 							<li class="form-line jf-required" data-type="control_textbox" id="id_8"><label
 									class="form-label form-label-top form-label-auto" id="label_8" for="input_8"> Full
@@ -1663,7 +1710,8 @@
 							<li class="form-line jf-required" data-type="control_textarea" id="id_4"><label
 									class="form-label form-label-top form-label-auto" id="label_4" for="input_4">
 									Message<span class="form-required">*</span> </label>
-								<div id="cid_4" class="form-input-wide jf-required"> <textarea style="border: darkgrey solid 2px" id="input_4"
+								<div id="cid_4" class="form-input-wide jf-required"> <textarea
+										style="border: darkgrey solid 2px" id="input_4"
 										class="form-textarea validate[required]" name="q4_message4" cols="28" rows="6"
 										data-component="textarea" required="" aria-labelledby="label_4"></textarea>
 								</div>
