--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<!-- Intro -->
 			<article id="intro">
 				<h2 class="major">Intro</h2>
-				<span class="image main1"><img src="images/Snapchat-1155797878 (1).jpg" alt="" /></span>
+				<span class="image main1"><img src="images/348361097 Instagram Chats.jpg" alt="" /></span>
 				<p> Greetings, I'm Katherin Garcia - a skilled software engineer with a passion for creative web
 					development. My introduction to the field came from my husbands projects, around that time I was also pursuing a course in Cyber Security where I learned how to build computers. 
 					Although I found computer building less fulfilling than I had hoped, it helped me discover my true passion for Software Engineering and building exceptional projects from scratch.
